refactor data population functions

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     <div class="col-12" id="humidity">
                         Humidity
                     </div>
-                    <div class="col-12" id="UV index">
+                    <div class="col-12" id="uvindex">
                         UV Index
                     </div>
                 </div>
