begin work on local storage

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
                 <h3 class="text-center mb-2">Search for a City</h3>
                 <input type="text" placeholder="Enter your city" class="form-control" id="city-input">
                 <button class="btn btn-dark btn-block mt-3 mb-3" id="search">Search</button>
-                <ul class="list-group-item list-group-item-dark text-center">
-                    <li>placeholder</li>
-                </ul>
+                <hr>
+                <div class="text-center" id="previous-search">
+                </div>
             </section>    
         
             <section class="col-8">
