added recent search buttons

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <input type="text" placeholder="Enter your city" class="form-control" id="city-input">
                 <button class="btn btn-dark btn-block mt-3 mb-3" id="search">Search</button>
                 <hr>
-                <div class="text-center" id="previous-search">
+                <div class="text-center row" id="previous-search">
                 </div>
             </section>    
         
