finished up css styling

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             </section>    
         
             <section class="col-8">
-                <div class="row ml-2" id="current">
+                <div class="row ml-2 mb-2" id="current">
                     <div class="col-12 font-weight-bold" id="city-name">
                         Your City
                     </div>
